--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6301,7 +6301,9 @@ textarea.form-control-lg {
 .card-header:first-child {
   border-radius: 0.35rem 0.35rem 0 0;
 }
-
+.headacc-wa {
+  color:rgb(130, 167, 63)
+}
 .card-footer {
   padding: 1rem 1.35rem;
   background-color: rgba(33, 40, 50, 0.03);
